# TAlker

./: .env.example  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  Makefile  README.md  SECURITY.md  config.example.yaml  parameters.example.py  pyproject.toml  requirements.txt  test_profile.py  test_server.py
dashboard/: Home.py  app.py  config.example.yaml  llm.py  openai_key.env  style.css
dashboard/.streamlit/: config.toml
dashboard/pages/: 1_Upload.py  2_Test.py  3_Analysis.py
data/: pdf_slides.txt  posts.csv
piazza_bot/: bot.py  parameters.example.py  profile.py  responses.py  test_profile.py  utils.py
src/: __init__.py
src/dashboard/: Home.py  evaluation.py  llm.py  providers.py
src/dashboard/pages/: 1_Upload.py  2_Test.py  3_Analysis.py  4_Evaluation.py  5_Settings.py
src/piazza_bot/: bot.py  parameters.example.py  profile.py  responses.py  server.py
tests/: __init__.py  conftest.py  test_evaluation.py  test_llm.py  test_providers.py
