[tool.poetry]
name = "talker"
version = "0.2.0"
description = "A Production-Grade RAG-Powered Piazza Teaching Assistant Bot"
authors = ["Lorenzo Scaturchio"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Web Framework
streamlit = "^1.29.0"
streamlit-authenticator = "^0.3.1"

# Piazza Integration
piazza-api = "^0.12.0"

# Environment & Config
python-dotenv = "^1.0.0"

# LangChain Core
langchain = "^0.3.18"
langchain-community = "^0.3.17"
langchain-openai = "^0.3.0"
langchain-chroma = "^0.2.0"

# LLM & Embeddings
openai = "^1.0.0"
tiktoken = "^0.5.2"

# Vector Store
chromadb = "^0.5.0"

# Hybrid Search & Reranking
sentence-transformers = "^3.0.0"
rank-bm25 = "^0.2.2"

# Document Processing
pypdf2 = "^3.0.1"
unstructured = "^0.16.0"

# Data & Visualization
pandas = "^2.1.4"
plotly = "^5.18.0"
wordcloud = "^1.9.3"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"

# Code Quality
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
ruff = "^0.4.0"

# Type Stubs
types-requests = "^2.31.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pylint.format]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
